chore: update README and add LICENSE

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bin": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "build": "bun build --target=node ./src/index.ts --outfile=dist/index.js && bun run build:types",
     "build:types": "tsc --declaration --emitDeclarationOnly --project tsconfig.types.json"
